cmake_minimum_required (VERSION 2.8)
project (pjt_trace_comm)
find_package(MPI REQUIRED)
SET(CMAKE_C_COMPILER "mpicxx")
 add_compile_options(-std=c++11)
include_directories(${MPI_INCLUDE_PATH})
include_directories(/public/home/ch190467/rdma-core-master/build/include)
link_directories("/public/home/ch190467/rdma-core-master/build/lib")
add_executable(pjt_trace_comm main.c Iph_psm2_comm.c Iph_Ib_comm.c rc-pingpong.c ibv-rc-pingpong.c IphCommTrace.c proc.c) 
target_link_libraries (pjt_trace_comm ${MPI_LIBRARIES} -libverbs -lrdmacm -lpsm2)
